tests/baselines/reference/anyIdenticalToItself.errors.txt
==== tests/cases/compiler/anyIdenticalToItself.ts (2 errors) ====
    function foo(x: any);
    ~~~~~~~~~~~~~~~~~~~~~
!!! anyIdenticalToItself.ts(1,1): error TS2149: Overload signature is not compatible with function definition:
!!! 	Call signature expects 1 or fewer parameters.
    function foo(x: any);
    ~~~~~~~~~~~~~~~~~~~~~
!!! anyIdenticalToItself.ts(2,1): error TS2149: Overload signature is not compatible with function definition:
!!! 	Call signature expects 1 or fewer parameters.
    function foo(x: any, y: number) { }
    
    class C {
        get X(): any {
            var y: any;
            return y;
        }
        set X(v: any) {
        }
    }